# arni

./: .gitignore  Cargo.toml  LICENSE  README.md  rpc.json
src/: client.rs  config.rs  data.rs  error.rs  history.rs  jsonrpc.rs  lib.rs  main.rs  novel_config.rs  persist.rs
src/app/: mod.rs
src/config/: config.rs  history.rs  mod.rs
src/data/: mod.rs
